--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Hannah Ma"
-image: images/profile.jpg
+image: resources/profile.jpg
 toc: false
 about:
   template: solana
@@ -13,7 +13,7 @@ about:
       href: mailto:hannahma2025@u.northwestern.edu
     - icon: file-text
       text: Resume
-      href: https://www.google.com
+      href: https://drive.google.com/file/d/1XdDxOeK8-F8aJ3Ql8rXR8QKz4pYBcWB3/view?usp=sharing
 ---
 
 I am a rising senior at Northwestern University studying Data Science and Biological Sciences. As an individual passionate about utilizing computational tools to improve drug discovery efforts, I seek opportunities to apply my natural sciences background in data science roles.
